gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag16977.d
version https://git-lfs.github.com/spec/v1
oid sha256:fdbbfde1a52bf0e5da6f3d9582bb7e979becbdfb056b734546cb9e11c7b1cf07
size 1354
